[gd_scene load_steps=2 format=3 uid="uid://b166n8farpm8b"]

[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="1_d5hif"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d5hif")
next_scene = "res://scenes/world/tavern/tavern_hub.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="NewGamePanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NewGamePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NewGamePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="NameBox" type="HBoxContainer" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="NewGamePanel/MarginContainer/VBoxContainer/NameBox"]
layout_mode = 2
text = "Character Name:"

[node name="NameInput" type="LineEdit" parent="NewGamePanel/MarginContainer/VBoxContainer/NameBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Story Mode"
popup/item_1/text = "Management Mode"
popup/item_1/id = 1

[node name="Buttons" type="HBoxContainer" parent="NewGamePanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="NewGamePanel/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="Start" type="Button" parent="NewGamePanel/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start Game"
